@@ -72,6 +72,7 @@ public class ElasticsearchJavaBasePlugin implements Plugin<Project> {
         configureCompile(project);
         configureInputNormalization(project);
         configureNativeLibraryPath(project);
+        configureEntitlements(project);
 
         // convenience access to common versions used in dependencies
         project.getExtensions().getExtraProperties().set("versions", VersionProperties.getVersions());
@@ -193,6 +194,38 @@ public class ElasticsearchJavaBasePlugin implements Plugin<Project> {
 
             test.dependsOn(nativeConfigFiles);
             systemProperties.systemProperty("es.nativelibs.path", libraryPath);
+        });
+    }
+
+    private static void configureEntitlements(Project project) {
+        Configuration agentJarConfig = project.getConfigurations().create("entitlementAgentJar");
+        agentJarConfig.defaultDependencies(deps -> {
+            deps.add(project.getDependencies().project(Map.of("path", ":libs:entitlement:agent", "configuration", "default")));
+        });
+        FileCollection agentFiles = agentJarConfig;
+
+        Configuration bridgeJarConfig = project.getConfigurations().create("entitlementBridgeJar");
+        bridgeJarConfig.defaultDependencies(deps -> {
+            deps.add(project.getDependencies().project(Map.of("path", ":libs:entitlement:bridge", "configuration", "default")));
+        });
+        FileCollection bridgeFiles = bridgeJarConfig;
+
+        project.getTasks().withType(Test.class).configureEach(test -> {
+            // See also SystemJvmOptions.maybeAttachEntitlementAgent.
+
+            // Agent
+            var systemProperties = test.getExtensions().getByType(SystemPropertyCommandLineArgumentProvider.class);
+            test.dependsOn(agentFiles);
+            systemProperties.systemProperty("es.entitlement.agentJar", agentFiles.getAsPath());
+            systemProperties.systemProperty("jdk.attach.allowAttachSelf", true);
+
+            // Bridge
+            String modulesContainingEntitlementInstrumentation = "java.logging,java.net.http,java.naming,jdk.net";
+            test.dependsOn(bridgeFiles);
+            // Tests may not be modular, but the JDK still is
+            test.jvmArgs(
+                "--add-exports=java.base/org.elasticsearch.entitlement.bridge=ALL-UNNAMED," + modulesContainingEntitlementInstrumentation
+            );
         });
     }
 
